--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,6 +269,7 @@ main {
 .product_section__result_block img {
   width: 100%;
   display: flex;
+  height: 100%;
 }
 
 .product_section__articles {
